--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -501,6 +501,7 @@
     <string name="cr_save_edit">保存图片编辑</string>
     <string name="cr_save_edit_desc">是否保存对当前图片的编辑?</string>
     <string name="cr_individual_end">直播秀已结束，点击播放按钮可再次直播秀</string>
+    <string name="cr_ex_live_end">已到下课时间，直播结束。</string>
     <string name="cr_connecting">教室正在连接中，请稍后...</string>
     <string name="cr_peer_live_occupy_tips">你正在和%1$s进行一对一视频，不能和其他学生视频</string>
 
@@ -903,8 +904,8 @@
     <string name="recommend_xiaojs">推荐小教室</string>
     <string name="cls_not_on_class_lesson_title">当前无课</string>
     <string name="exit_live_tips">是否退出直播？</string>
-    <string name="living_back_to_talk_mode_title">学生看不到你的视频</string>
-    <string name="living_back_to_talk_mode_sub">你可以和学生进行文字交流</string>
+    <string name="living_back_to_talk_mode_title">当前为交流模式</string>
+    <string name="living_back_to_talk_mode_sub">学生看不到你的视频,你可以和学生进行文字交流</string>
     <string name="offline_peer_to_peer_tips">该学生已下线，不能1对1视频哦～</string>
     <string name="upload_support_error_tips">暂不支持此文件格式,目前只支持上传图片、PPT、视频文件</string>
     <string name="live_occur_exception">抱歉，直播出现异常</string>
