Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -990,6 +990,11 @@
     <string name="basic_infomation">基本信息</string>
     <string name="record_lesson">录播课</string>
     <string name="valid_days">有效期%1$d天</string>
-
+    <string name="enroll_confirm">报名确认</string>
+    <string name="no_remarks">无备注</string>
+    <string name="please_input_remark">请填写备注说明</string>
+    <string name="man_register">手动注册</string>
+    <string name="import_from_class_or_lesson">从班／课导入</string>
+    <string name="phone_usage_tips">手机号将作为学生登录小教室的唯一账号</string>
 
 </resources>
