--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -996,5 +996,7 @@
     <string name="man_register">手动注册</string>
     <string name="import_from_class_or_lesson">从班／课导入</string>
     <string name="phone_usage_tips">手机号将作为学生登录小教室的唯一账号</string>
+    <string name="telc_category">学科类目</string>
+    <string name="valid">有效期</string>
 
 </resources>
