--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -867,6 +867,7 @@
     <string name="lesson_op_disagree_invite">拒绝邀请</string>
     <string name="lesson_op_reject_reason">查看原因</string>
     <string name="lesson_op_create_lesson_again">再次开课</string>
+    <string name="lesson_op_apply_students_list">学生名单</string>
 
     <string name="create_class_success">创建班成功</string>
     <string name="class_name_not_null">班级名称不能为空</string>
