--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1013,4 +1013,11 @@
     <string name="record_lesson_shelve_tip_for_not_verify">上架后，不允许修改哦，确定需要继续上架?</string>
     <string name="record_lesson_shelve_tip">上架提示</string>
 
+
+    <string name="qrcode_tips_recorded_lesson">长按识别二维码，免费学习</string>
+    <string name="qrcode_tips_lesson">长按识别二维码，免费听课</string>
+    <string name="qrcode_tips_class">长按识别二维码，加入班级</string>
+    <string name="qrcode_tips_welcom_class">邀请你加入班级，一起学习</string>
+    <string name="qrcode_tips_welcom_lesson">邀请你一起学习</string>
+
 </resources>
