--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1042,6 +1042,9 @@
     <string name="look_rlesson_dir">查看课程目录</string>
     <string name="home_no_class_tip">你还没有任何班</string>
     <string name="home_no_recorded_lesson_tip">你还没有任何录播课</string>
+    <string name="my_class_list_no_class_tip">你暂时还没有班哦~</string>
+    <string name="my_class_list_no_lesson_tip">你暂时还没有公开课哦~</string>
+    <string name="my_class_list_no_rlesson_tip">你暂时还没有录播课哦~</string>
 
 
 </resources>
