--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1042,6 +1042,8 @@
     <string name="look_rlesson_dir">查看课程目录</string>
     <string name="home_no_class_tip">你还没有任何班</string>
     <string name="home_no_recorded_lesson_tip">你还没有任何录播课</string>
+    <string name="readying_live_tips">正在连接...</string>
+    <string name="streaming_occur_exception">直播连接失败，请重试!</string>
 
 
 </resources>
