直播录像转码下载；搜学生；分页资料库

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1049,6 +1049,11 @@
     <string name="readying_live_tips">正在连接...</string>
     <string name="streaming_occur_exception">直播连接失败，请重试!</string>
 
+    <string name="yes">是</string>
+    <string name="no">否</string>
+    <string name="donwload_doc_conver_vedio_tip">该资料为直播录像视频，需先转码才能下载，是否立即转码？</string>
+    <string name="hint_input_search_students">姓名/手机号</string>
+
 
 
 </resources>
