--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="mobile_kick_out_cancel">取消强制进入，教室无法使用</string>
     <string name="mobile_kick_out_tips">您账号已经在其它%1$s登录了教室</string>
     <string name="mobile_network_forbid">停止使用</string>
-    <string name="mobile_network_allow">继续使用</string>
+    <string name="mobile_network_allow">继续直播</string>
     <string name="lead_teacher">主讲</string>
     <string name="assistant_teacher">助教</string>
     <string name="tips">提示</string>
